[project]
name = "dsala"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "gspread>=6.1.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
]
